:bug: Fix dashboard left sidebar, the [x] overlaps the field

--- a/frontend/resources/styles/main/partials/dashboard-sidebar.scss
+++ b/frontend/resources/styles/main/partials/dashboard-sidebar.scss
@@ -260,7 +260,7 @@
       .close {
         background-color: $color-white;
         cursor: pointer;
-        padding: 3px 5px;
+        padding-left: 5px;
 
         svg {
           fill: $color-gray-30;
